# acpg

./: .env.example  .gitignore  .~lock.ACPG.docx#  ACPG Prototype Development Guide.docx  ACPG.docx  ACPG.txt  ACPG_Concept.docx  ACPG_Design.docx  ACPG_Figure1  ACPG_IP_Application.docx  ACPG_figure_101  CODE_REVIEW_FINDINGS.md  Dockerfile  HANDOVER.md  PROJECT_SUMMARY.md  PR_DESCRIPTION.md  PR_READINESS.md  QUICKSTART.md  README.md  README_SCRIPTS.md  ROADMAP.md  SETUP.md  config.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test_kimi.py
.github/: compliance-gate-profiles.json
backend/: .env.example  Dockerfile.dev  acpg.db  alembic.ini  cli.py  llm_config.yaml  main.py  requirements-dev.txt  requirements.txt
demo/: PATENT_DEMO.md  compliant_code.py  demo_proof.json  fixed_by_qwen.py  proof_bundle.json  run_demo.sh  vulnerable_code.py
docs/: CI_CD_INTEGRATION.md  CLI_REFERENCE.md  COMPLETE_FEATURE_LIST.md  CURRENT_PRIORITIES.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  END_TO_END_TEST.md  IMPLEMENTATION_SUMMARY.md  INVESTOR_PITCH_BRIEF.md  NEW_USER_MANUAL.md  NEXT_STEPS.md  OPERATIONS.md  PERFORMANCE_METRICS.md  PROMETHEUS_METRICS.md  README.md  STATIC_ANALYSIS_GUIDE.md  STATIC_ANALYSIS_INTEGRATION_PLAN.md  TAMPER_DETECTION.md  TESTING_SUMMARY.md  TEST_RESULTS.md  TEST_RESULTS_COMPLETE.md  TODO_VC_PITCH.md  TOOL_PIPELINE_GUIDE.md  TOOL_WORKFLOW_GUIDE.md  USER_GUIDE.md  VC_DEMO_SCRIPT.md  WORKFLOW_TEST_GUIDE.md  runtime_policy_compliance.md
frontend/: .eslintrc.cjs  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js  (+2 more)
(+134 files in other folders)
